--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "agileupstate"
-version = "0.0.8"
+version = "0.0.9"
 description = "State mangement tool for Future Agile CICD"
 authors = ["agileturret <Paul.Gilligan@agilesolutions.co.uk>"]
 license = "Apache-2.0"
@@ -24,7 +24,7 @@ pytest = "^7.1.2"
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.poetry_bumpversion.file."agileup/__init__.py"]
+[tool.poetry_bumpversion.file."src/agileupstate/__init__.py"]
 
 [tool.poetry.scripts]
 agileupstate = "agileupstate.cli:cli"
