--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
 name = "agileupstate"
-version = "0.0.9"
+version = "0.0.11"
 description = "State mangement tool for Future Agile CICD"
 authors = ["agileturret <Paul.Gilligan@agilesolutions.co.uk>"]
 license = "Apache-2.0"
 readme = "README.md"
 homepage = "https://github.com/Agile-Solutions-GB-Ltd/agileupstate"
-repository = "git@github.com:Agile-Solutions-GB-Ltd/agileupstate.git"
+repository = "https://github.com/Agile-Solutions-GB-Ltd/agileupstate.git"
 
 [tool.poetry.dependencies]
 python = "^3.8"
