--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "agileupstate"
-version = "0.0.11"
+version = "0.0.12"
 description = "State mangement tool for Future Agile CICD"
 authors = ["agileturret <Paul.Gilligan@agilesolutions.co.uk>"]
 license = "Apache-2.0"
@@ -13,7 +13,7 @@ python = "^3.8"
 click = "^8.1"
 PyYAML = "^5.4.1"
 prettytable = "^3.3.0"
-Fabric3 = "^1.14.post1"
+hvac = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0"
